added 3 categories with photos

--- a/index.html
+++ b/index.html
@@ -112,11 +112,166 @@
 			
 			<div class="container">
 				<div class="row">
-					
 					<div class="col-sm-12 col-xs-12 goods-gallery">
-						
 						<div class="row box">
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+								<a href="#good-19" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/19-min.png')"></div>
+									<p>Высокопрочный крепеж</p>
+								</a>
 
+								<div class="hidden">
+									<div class="full-descr" id="good-19">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Высокопрочный крепеж</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-sm-6">
+
+												<img src="img/goods/19-min.png" alt="Высокопрочный крепеж">
+
+											</div>
+
+											<div class="col-sm-6">
+
+												<p>В магазине представлен широкий выбор высокопрочного крепежа:</p>
+
+												<ul>
+													<li>Болты 10,9 и 12,9</li>
+													<li>Болты с мелким шагом</li>
+													<li>Винты в/ш DIN 912 , 7984, 6912</li>
+													<li>Винты ISO 7380</li>
+
+												</ul>
+
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+
+								<a href="#good-20" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/20-min.png')"></div>
+									<p>Винты установочные</p>
+								</a>
+
+								<div class="hidden">
+									<div class="full-descr" id="good-20">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Винты установочные</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<img src="img/goods/20-min.png" alt="Винты установочные">
+
+											</div>
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<p>В магазине представлен широкий выбор установочных винтов:</p>
+
+												<ul>
+													<li>DIN 913</li>
+													<li>DIN 914</li>
+													<li>DIN 915</li>
+													<li>DIN 553</li>
+
+												</ul>
+
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+
+								<a href="#good-21" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/21-min.png')"></div>
+									<p>Кольца стопорные</p>
+								</a>
+
+								<div class="hidden">
+									<div class="full-descr" id="good-21">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Кольца стопорные</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<img src="img/goods/21-min.png" alt="Кольца стопорные">
+
+											</div>
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<p>В магазине представлен широкий выбор стопорных колец:</p>
+
+												<ul>
+													<li>DIN 471</li>
+													<li>DIN 472</li>
+												</ul>
+
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+
+								<a href="#good-22" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/2-min.jpg')"></div>
+									<p>Шайбы стопорные</p>
+								</a>
+
+								<div class="hidden">
+									<div class="full-descr" id="good-22">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Шайбы стопорные</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<img src="img/goods/2-min.jpg" alt="Шайбы стопорные">
+
+											</div>
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<p>В магазине представлен широкий выбор стопорных шайб:</p>
+
+												<ul>
+													<li>ГОСТ 11872</li>
+													<li>Сталь 45</li>
+													<li>NORD-LOCK (под заказ)</li>
+												</ul>
+
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
 							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
 								<a href="#good-1" class="popup-work-descr">
 									<div class="goods-item-preview background-image" style="background-image: url('img/goods/1-min.jpg')"></div>
@@ -1019,9 +1174,7 @@
 					<div class="col-lg-2 hidden-md hidden-sm hidden-xs">
 						<h2 class="footer-logo text-center">Евроболт</h2>
 					</div>
-
 				</div>
-			</div>
 		</footer>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -1056,7 +1209,7 @@
         s.async = true;
         s.src = "https://mc.yandex.ru/metrika/tag.js";
 
-        if (w.opera == "[object Opera]") {
+        if (w.opera === "[object Opera]") {
             d.addEventListener("DOMContentLoaded", f, false);
         } else { f(); }
     })(document, window, "yandex_metrika_callbacks2");
