added 4 categories changed description of 1 item

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 												<ul>
 													<li>Болты 10,9 и 12,9</li>
 													<li>Болты с мелким шагом</li>
-													<li>Винты в/ш DIN 912 , 7984, 6912</li>
+													<li>Винты в/ш DIN 912 , 7984, 6912, 7991</li>
 													<li>Винты ISO 7380</li>
 
 												</ul>
@@ -850,7 +850,168 @@
 									</div>
 								</div>
 							</div>
-							
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+
+								<a href="#good-23" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/23-min.png')"></div>
+									<p>Урны на ножках</p>
+								</a>
+
+								<div class="hidden">
+									<div class="full-descr" id="good-23">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Урны на ножках</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<img src="img/goods/23-min.png" alt="урны на ножках">
+
+											</div>
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<p>В магазине представлены:</p>
+
+												<ul>
+													<li>Урна на ножках -20л антик медь (1670р)</li>
+													<li>Урна на ножках -20л антик серебро (1670р)</li>
+													<li>Урна на ножках -30л антик медь (1800р)</li>
+													<li>Урна на ножках -30л антик серебро (1800р)</li>
+												</ul>
+
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+
+								<a href="#good-24" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/24-min.png')"></div>
+									<p>Урны с площадкой</p>
+								</a>
+
+								<div class="hidden">
+									<div class="full-descr" id="good-24">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Урны с площадкой</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<img src="img/goods/24-min.png" alt="урны с площадкой">
+
+											</div>
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<p>В магазине представлены:</p>
+
+												<ul>
+													<li>Урна с площадкой  -20л антик медь (1670р)</li>
+													<li>Урна с площадкой  -20л антик серебро (1670р)</li>
+													<li>Урна с площадкой  -30л антик медь (1860р)</li>
+
+												</ul>
+
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+
+								<a href="#good-25" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/25-min.png')"></div>
+									<p>Урны с крышей</p>
+								</a>
+
+								<div class="hidden">
+									<div class="full-descr" id="good-25">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Урны с крышей</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<img src="img/goods/25-min.png" alt="урны с крышей">
+
+											</div>
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<p>В магазине представлены:</p>
+
+												<ul>
+													<li>Урна с крышей -20л антик медь (2150р)</li>
+													<li>Урна с крышей -20л антик серебро (2150р)</li>
+													<li>Урна с крышей -30л антик медь (2500р)</li>
+													<li>Урна с крышей -30л антик серебро (2500р)</li>
+													<li>Пепельница (цвет: черный) (190р). Продается отдельно.</li>
+												</ul>
+
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+
+								<a href="#good-26" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/26-min.png')"></div>
+									<p>Урны</p>
+								</a>
+
+								<div class="hidden">
+									<div class="full-descr" id="good-26">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Урны</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<img src="img/goods/26-min.png" alt="урны">
+
+											</div>
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<p>В магазине представлены урны в разных цветах:</p>
+
+												<ul>
+													<li>Урна на ножках -20л зеленая (RAL 6001)</li>
+													<li>Урна на ножках -20л серебро</li>
+													<li>Урна на ножках -20л чёрная</li>
+													<li>Урна на ножках -20л шоколад (RAL 8017)</li>
+													<li>Все по 1700 р.</li>
+												</ul>
+
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
 <!--							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">-->
 <!--								<a href="#good-15" class="popup-work-descr">-->
 <!--									<div class="goods-item-preview background-image" style="background-image: url('img/goods/15-min.jpg')"></div>-->
