changed the photo in category (added the extra item to it)

--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
 
 											<div class="col-md-6 col-sm-12 col-xs-12">
 
-												<img src="img/goods/25-min.png" alt="урны с крышей">
+												<img src="img/goods/25-1-min.png" alt="урны с крышей">
 
 											</div>
 
