added new category

--- a/index.html
+++ b/index.html
@@ -273,6 +273,46 @@
 								</div>
 							</div>
 							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+
+								<a href="#good-27" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/27-min.png')"></div>
+									<p>Гайки шлицевые</p>
+								</a>
+
+								<div class="hidden">
+									<div class="full-descr" id="good-27">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Гайки шлицевые</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<img src="img/goods/27-min.png" alt="Гайки шлицевые">
+
+											</div>
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<p>В магазине представлен широкий выбор гаек круглых шлицевых:</p>
+
+												<ul>
+													<li>ГОСТ 11871</li>
+													<li>Размеры С М10 - М105</li>
+													<li>Сталь 45</li>
+
+												</ul>
+
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
 								<a href="#good-1" class="popup-work-descr">
 									<div class="goods-item-preview background-image" style="background-image: url('img/goods/1-min.jpg')"></div>
 									<p>Метрический крепеж</p>
@@ -1110,7 +1150,7 @@
 
 											<div class="col-sm-6">
 
-												<img src="img/goods/17-min.jpg" alt="Метрический крепеж">
+												<img src="img/goods/17-min.jpg" alt="оснастка для инструмента">
 
 											</div>
 
