added new category

--- a/index.html
+++ b/index.html
@@ -854,7 +854,47 @@
 									</div>
 								</div>
 							</div>
-							
+
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+
+								<a href="#good-29" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/29-min.png')"></div>
+									<p>Система выравнивания плитки DLS</p>
+								</a>
+
+								<div class="hidden">
+									<div class="full-descr" id="good-29">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Система выравнивания плитки DLS</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<img src="img/goods/29-min.png" alt="Система выравнивания плитки DLS">
+
+											</div>
+
+											<div class="col-md-6 col-sm-12 col-xs-12">
+
+												<p>В магазине представлена система выравнивания плитки DLS:</p>
+
+												<ul>
+													<li>Клинья</li>
+													<li>Основы</li>
+													<li>Зажимы</li>
+													<li>Шов 1,5 мм</li>
+												</ul>
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+
 							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
 								<a href="#good-13" class="popup-work-descr">
 									<div class="goods-item-preview background-image" style="background-image: url('img/goods/13-min.jpg')"></div>
