--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 												
 												<ul>
 													<li>саморезы с крупным и мелким шагом</li>
-													<li>саморезы с перссшайбой</li>
+													<li>саморезы с прессшайбой</li>
 													<li>саморезы для крепления ГВЛ</li>
 													<li>саморезы кровельные</li>
 													<li>саморезы оконные</li>
