added new category

--- a/index.html
+++ b/index.html
@@ -1302,6 +1302,53 @@
 									</div>
 								</div>
 							</div>
+							<div class="col-md-2 col-sm-3 col-xs-6 goods-item column">
+								<a href="#good-30" class="popup-work-descr">
+									<div class="goods-item-preview background-image" style="background-image: url('img/goods/30-min.png')"></div>
+									<p>Пасты для рук; Смазки силиконовые, аэрозольные</p>
+								</a>
+
+								<div class="hidden">
+									<div class="full-descr" id="good-30">
+
+										<div class="row text-center">
+											<h3 class="section-heading">Пасты для рук; Смазки силиконовые, аэрозольные</h3>
+										</div>
+
+										<div class="row">
+
+											<div class="col-sm-6">
+
+												<img src="img/goods/30-min.png" alt="оснастка для инструмента">
+
+											</div>
+
+											<div class="col-sm-6">
+
+												<p>В магазине представлены пасты для рук, смазки силиконовые, аэрозольные:</p>
+
+												<ul>
+													<li>Средство для рук с мягким скрабом 200мл EXTREME Чистик</li>
+													<li>Паста чистящая для рук 200мл PROFI Чистик</li>
+													<li>Паста очищающая для рук 200мл ХВОЙНЫЙ Чистик</li>
+													<li>Смазка-карандаш медная высокотемпературная (до +1000 С) 16гр ВМПАВТО</li>
+													<li>Смазка-карандаш графитовая антифрикционная (до +1000 С) 16гр ВМПАВТО</li>
+													<li>Смазка-карандаш алюминиевая антипригарная (до +600 С) 13гр ВМПАВТО</li>
+													<li>Смазка жидкая силиконовая Капля 30мл SILICOT</li>
+													<li>Смазка силиконовая для резиновых уплотнителей 30мл SILICOT REZIN</li>
+													<li>Смазка антифрикционная проникающая "Валера" 140мл ВМПАВТО</li>
+													<li>Силиконовая смазка для замков и петель 210мл SILICOT</li>
+													<li>Средство для легкого откручивания ФИКС 30гр ВМПАВТО</li>
+													<li>Смазка для хвостовиков буров БУР 30гр ВМПАВТО</li>
+												</ul>
+
+											</div>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
 
 						</div>
 						
