add number and social icons

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						<div class="top-phone-container">
 							<a class="top-phone" href="tel:+74932426842">+7 (4932) 42-68-42</a>
 							<a class="top-phone" href="tel:+74932426232">+7 (4932) 42-62-32</a>
+							<a class="top-phone" href="tel:+79960279353">+7 (996) 027-93-53<img class="whatsapp" src="./img/whatsapp.svg"><img class="telegram" src="./img/telegram.svg"></a>
 						</div>
 					</div>
 
